ページ遷移のリンクを修正

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="index.html">トップ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="terms.html">用語</a>
+                        <a class="nav-link" href="html/terms.html">用語</a>
                     </li>
                 </ul>
             </div>
@@ -35,28 +35,28 @@
             <table class="table table-bordered table-striped text-center text-nowrap">
                 <thead>
                     <tr>
-                        <th class="p-1"><a href="terms.html">用語</a></th>
-                        <th class="p-1"><a href="r6_result.html">令和6年</a></th>
-                        <th class="p-1"><a href="r5_result.html">令和5年</a></th>
-                        <th class="p-1"><a href="r4_result.html">令和4年</a></th>
-                        <th class="p-1"><a href="r3_result.html">令和3年</a></th>
-                        <th class="p-1"><a href="r1_result.html">令和元年</a></th>
-                        <th class="p-1"><a href="h30_result.html">平成30年</a></th>
-                        <th class="p-1"><a href="h29_result.html">平成29年</a></th>
-                        <th class="p-1"><a href="h28_result.html">平成28年</a></th>
-                        <th class="p-1"><a href="h27_result.html">平成27年</a></th>
-                        <th class="p-1"><a href="h26_result.html">平成26年</a></th>
-                        <th class="p-1"><a href="h25_result.html">平成25年</a></th>
-                        <th class="p-1"><a href="h24_result.html">平成24年</a></th>
-                        <th class="p-1"><a href="h23_result.html">平成23年</a></th>
-                        <th class="p-1"><a href="h22_result.html">平成22年</a></th>
-                        <th class="p-1"><a href="h21_result.html">平成21年</a></th>
+                        <th class="p-1"><a href="html/terms.html">用語</a></th>
+                        <th class="p-1"><a href="html/r6_result.html">令和6年</a></th>
+                        <th class="p-1"><a href="html/r5_result.html">令和5年</a></th>
+                        <th class="p-1"><a href="html/r4_result.html">令和4年</a></th>
+                        <th class="p-1"><a href="html/r3_result.html">令和3年</a></th>
+                        <th class="p-1"><a href="html/r1_result.html">令和元年</a></th>
+                        <th class="p-1"><a href="html/h30_result.html">平成30年</a></th>
+                        <th class="p-1"><a href="html/h29_result.html">平成29年</a></th>
+                        <th class="p-1"><a href="html/h28_result.html">平成28年</a></th>
+                        <th class="p-1"><a href="html/h27_result.html">平成27年</a></th>
+                        <th class="p-1"><a href="html/h26_result.html">平成26年</a></th>
+                        <th class="p-1"><a href="html/h25_result.html">平成25年</a></th>
+                        <th class="p-1"><a href="html/h24_result.html">平成24年</a></th>
+                        <th class="p-1"><a href="html/h23_result.html">平成23年</a></th>
+                        <th class="p-1"><a href="html/h22_result.html">平成22年</a></th>
+                        <th class="p-1"><a href="html/h21_result.html">平成21年</a></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <th class="p-1">問1</th>
-                        <td class="p-1"><a href="terms.html#h_AS">AS</a></td>
+                        <td class="p-1"><a href="html/terms.html#h_AS">AS</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -110,7 +110,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問4</th>
-                        <td class="p-1"><a href="terms.html#h_RIP">RIP</a> / <a href="terms.html#h_OSPF">OSPF</a></td>
+                        <td class="p-1"><a href="html/terms.html#h_RIP">RIP</a> / <a href="html/terms.html#h_OSPF">OSPF</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -128,7 +128,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問5</th>
-                        <td class="p-1"><a href="terms.html#h_スパニングツリープロトコル">スパニングツリー<br>プロトコル</a></td>
+                        <td class="p-1"><a href="html/terms.html#h_スパニングツリープロトコル">スパニングツリー<br>プロトコル</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -146,7 +146,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問6</th>
-                        <td class="p-1"><a href="terms.html#h_ICMPv6">ICMPv6</a></td>
+                        <td class="p-1"><a href="html/terms.html#h_ICMPv6">ICMPv6</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -164,7 +164,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問7</th>
-                        <td class="p-1"><a href="terms.html#h_マルチキャストアドレス">マルチキャスト<br>アドレス</a></td>
+                        <td class="p-1"><a href="html/terms.html#h_マルチキャストアドレス">マルチキャスト<br>アドレス</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -200,7 +200,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問9</th>
-                        <td class="p-1"><a href="terms.html#h_シーケンス番号">シーケンス番号</a><br>/ <a href="terms.html#h_確認応答番号">確認応答番号</a></td>
+                        <td class="p-1"><a href="html/terms.html#h_シーケンス番号">シーケンス番号</a><br>/ <a href="html/terms.html#h_確認応答番号">確認応答番号</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -290,7 +290,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問14</th>
-                        <td class="p-1"><a href="terms.html#h_RIP">RIP</a> / <a href="terms.html#h_OSPF">OSPF</a></td>
+                        <td class="p-1"><a href="html/terms.html#h_RIP">RIP</a> / <a href="html/terms.html#h_OSPF">OSPF</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -326,7 +326,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問16</th>
-                        <td class="p-1"><a href="terms.html#h_CDN">CDN</a></td>
+                        <td class="p-1"><a href="html/terms.html#h_CDN">CDN</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -434,7 +434,7 @@
                     </tr>
                     <tr>
                         <th class="p-1">問22</th>
-                        <td class="p-1"><a href="terms.html#h_PCIExpress">PCI Express</a></td>
+                        <td class="p-1"><a href="html/terms.html#h_PCIExpress">PCI Express</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
