--- a/html/r1_result.html
+++ b/html/r1_result.html
@@ -12,14 +12,14 @@
     <!-- ナビゲーション -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">ネットワークスペシャリスト学習記録</a>
+            <a class="navbar-brand" href="../index.html">ネットワークスペシャリスト学習記録</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">トップ</a>
+                        <a class="nav-link" href="../index.html">トップ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="terms.html">用語</a>
