--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <tr>
                         <th class="p-1">問1</th>
                         <td class="p-1"><a href="html/terms.html#h_AS">AS</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -75,7 +75,7 @@
                     <tr>
                         <th class="p-1">問2</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_OFDM">OFDM</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -93,7 +93,7 @@
                     <tr>
                         <th class="p-1">問3</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_OSPF">OSPF</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -111,7 +111,7 @@
                     <tr>
                         <th class="p-1">問4</th>
                         <td class="p-1"><a href="html/terms.html#h_RIP">RIP</a> / <a href="html/terms.html#h_OSPF">OSPF</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -129,7 +129,7 @@
                     <tr>
                         <th class="p-1">問5</th>
                         <td class="p-1"><a href="html/terms.html#h_スパニングツリープロトコル">スパニングツリー<br>プロトコル</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_MTU">MTU</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -147,7 +147,7 @@
                     <tr>
                         <th class="p-1">問6</th>
                         <td class="p-1"><a href="html/terms.html#h_ICMPv6">ICMPv6</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -165,7 +165,7 @@
                     <tr>
                         <th class="p-1">問7</th>
                         <td class="p-1"><a href="html/terms.html#h_マルチキャストアドレス">マルチキャスト<br>アドレス</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_BGP">BGP</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -183,7 +183,7 @@
                     <tr>
                         <th class="p-1">問8</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -201,7 +201,7 @@
                     <tr>
                         <th class="p-1">問9</th>
                         <td class="p-1"><a href="html/terms.html#h_シーケンス番号">シーケンス番号</a><br>/ <a href="html/terms.html#h_確認応答番号">確認応答番号</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -219,7 +219,7 @@
                     <tr>
                         <th class="p-1">問10</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -237,7 +237,7 @@
                     <tr>
                         <th class="p-1">問11</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_VLANタグ">VLANタグ</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -255,7 +255,7 @@
                     <tr>
                         <th class="p-1">問12</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -273,7 +273,7 @@
                     <tr>
                         <th class="p-1">問13</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -291,7 +291,7 @@
                     <tr>
                         <th class="p-1">問14</th>
                         <td class="p-1"><a href="html/terms.html#h_RIP">RIP</a> / <a href="html/terms.html#h_OSPF">OSPF</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -309,7 +309,7 @@
                     <tr>
                         <th class="p-1">問15</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -327,7 +327,7 @@
                     <tr>
                         <th class="p-1">問16</th>
                         <td class="p-1"><a href="html/terms.html#h_CDN">CDN</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -345,7 +345,7 @@
                     <tr>
                         <th class="p-1">問17</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -363,7 +363,7 @@
                     <tr>
                         <th class="p-1">問18</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -381,7 +381,7 @@
                     <tr>
                         <th class="p-1">問19</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -399,7 +399,7 @@
                     <tr>
                         <th class="p-1">問20</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -417,7 +417,7 @@
                     <tr>
                         <th class="p-1">問21</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_IEEE802.1X">IEEE802.1X</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -435,7 +435,7 @@
                     <tr>
                         <th class="p-1">問22</th>
                         <td class="p-1"><a href="html/terms.html#h_PCIExpress">PCI Express</a></td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -453,7 +453,7 @@
                     <tr>
                         <th class="p-1">問23</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_FaaS">FaaS</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -471,7 +471,7 @@
                     <tr>
                         <th class="p-1">問24</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1"><a href="html/terms.html#h_SysML">SysML</a></td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -489,7 +489,7 @@
                     <tr>
                         <th class="p-1">問25</th>
                         <td class="p-1">⚪︎</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">⚪︎</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
@@ -507,7 +507,7 @@
                     <tr>
                         <th class="p-1">正解率</th>
                         <td class="p-1">64%</td>
-                        <td class="p-1">-</td>
+                        <td class="p-1">64%</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
                         <td class="p-1">-</td>
